Improved location clustering for filtered data

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,9 @@ fiona==1.9.5
 folium==0.14.0
 fonttools==4.44.0
 fqdn==1.5.1
+geographiclib==2.0
 geopandas==0.14.0
+geopy==2.4.1
 googlemaps==4.10.0
 idna==3.4
 ipykernel==6.26.0
