--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3.post1
+pywin32==306
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
@@ -57,8 +58,11 @@ sqlparse==0.4.4
 sympy==1.12
 tenacity==8.2.2
 tqdm==4.66.1
+types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==2.1.0
+wcwidth==0.2.12
+webencodings==0.5.1
 whitenoise==6.5.0
